--- a/style.css
+++ b/style.css
@@ -57,3 +57,15 @@ a:hover::before {
     transform: rotate(360deg);
   }
 }
+
+a::after {
+  content: '';
+  position: absolute;
+  inset: 4px;
+  background: #0e1538;
+  transition: 0.5s;
+}
+
+a:hover::after {
+  background: var(--clr);
+}
