Style a tag hover span

--- a/style.css
+++ b/style.css
@@ -27,6 +27,8 @@ a {
   transition: 1s;
   text-decoration: none;
   overflow: hidden;
+  -webkit-box-reflect: below 1px
+    linear-gradient(transparent, transparent, #0004);
 }
 
 a:hover {
@@ -79,4 +81,9 @@ a span {
   opacity: 0.5;
   text-transform: uppercase;
   letter-spacing: 4px;
+  transition: 0.5s;
+}
+
+a:hover span {
+  opacity: 1;
 }
